XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

- Implemented RFC #0106 - Array access / iteration / type boxing / generics 
  (friebe)
- Fix output of stacktraces in util.ChainedException
  (kiesel)
- Fix DomXSLProcessor's error handling by clearing the error stack when
  error was handled
  (hinckel)
- Implemented RFC #0120 - Console::$out and Console::$err
  (friebe)
- Properly detect identity columns in rdbms.sybase.SybaseDBAdapter
  (kiesel)
- Fixed bug with io.File when reading from zero-length files
  (kiesel)
- add @args annotation for util.cmd.Command scripts (fixes bug #23)
  (friebe, kiesel)
- fix extraction of .xar files on Windows (fixes bug #22)
  (friebe)

Version 5.4.0, released 2007-04-18
----------------------------------
SVN version: 10031

- Implemented RFC #0113 - Include PHP5 SOAP extension
  (kiesel, rene)
- Implemented RFC #0118 - Exceptions for missing token values in 
  StatementFormatter
  (friebe)
- Implemented RFC #0081 - new lang.Runnable interface
  (friebe)
- Fixed rdbms.StatementFormatter class when given an array of objects
  to format, e.g. array(Date::now(), DateUtil::addDays(Date::now(), 1)).
  In certain situations, this would even cause segmentation faults!
  (friebe)

Version 5.3.2, released 2007-04-01
----------------------------------
SVN version: 9830

- Implemented RFC #0111 - Remove "util" and "ext"
  (friebe)
- Implemented RFC #0116 - Ports infrastructure: Technologies and packages
  (friebe, kiesel)
- Added support for XML namespaces to xml.meta Marshaller / Unmarshaller
  (friebe)
- Fixed peer.mail.store.CclientStore (ext/imap wrapper) implementation 
  which was broken due to PHP5 BC breaks
  (friebe)
- Implemented RFC #0112 - HttpScriptletException inherits ChainedException
  (kiesel)
- Implemented RFC #0110 - RemoteStackTraceElement
  (friebe)